[gd_scene load_steps=4 format=3 uid="uid://c60okswew4i4x"]

[ext_resource type="Script" path="res://scripts/vox_gen/VoxGen.gd" id="1"]
[ext_resource type="Script" path="res://scenes/Planets/Planet.gd" id="2"]

[sub_resource type="BoxShape3D" id="1"]

[node name="Planet" type="Area3D" groups=["Planet"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -195.558, 84.5978, 0)
collision_layer = 3
collision_mask = 3
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
script = ExtResource("2")
spawn_buffer = 0.5

[node name="VoxGen" type="Node3D" parent="."]
script = ExtResource("1")
debug = false

[node name="SpawnCast" type="RayCast3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
shape = SubResource("1")

[connection signal="body_entered" from="." to="." method="_on_Planet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Planet_body_exited"]
[connection signal="child_entered_tree" from="." to="." method="_on_Planet_child_entered_tree"]
[connection signal="initialized" from="VoxGen" to="." method="_on_VoxGen_initialized"]
